--- a/front-end/index.html
+++ b/front-end/index.html
@@ -318,7 +318,7 @@
                     <input type="url" id="update-image-url" name="image_url" required placeholder="https://example.com/image.jpg">
                 </div>
                 
-                <button type="submit">Update Product</button>
+                <button type="submit" onclick="updateProduct()">Update Product</button>
             </form>
         </div>
         
@@ -371,5 +371,6 @@
     <script src="js/queryCmds.js" type="text/javascript"></script>
     <script src="js/getAllProduct.js" type="text/javascript"></script>
     <script src="js/createProduct.js" type="text/javascript"></script>
+    <script src="js/updateProduct.js" type="text/javascript"></script>
 </body>
 </html>
