--- a/front-end/index.html
+++ b/front-end/index.html
@@ -340,7 +340,7 @@
                     <p><strong>Category:</strong> <span id="delete-product-category"></span></p>
                 </div>
                 
-                <button type="submit" class="delete-btn">Delete Product</button>
+                <button type="submit" class="delete-btn" onclick="deleteProduct()">Delete Product</button>
             </form>
         </div>
     </div>
@@ -372,5 +372,6 @@
     <script src="js/getAllProduct.js" type="text/javascript"></script>
     <script src="js/createProduct.js" type="text/javascript"></script>
     <script src="js/updateProduct.js" type="text/javascript"></script>
+    <script src="js/deleteProduct.js" type="text/javascript"></script>
 </body>
 </html>
